--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -6,13 +6,13 @@
 {% if request.user.is_applicant %}
 {% if not request.user.has_resume %}
 <div class="alert alert-danger" role="alert">
-    <b>You seening this because you have not created any resume. Create one now. <a href="{% url 'update-resume'%}">here</a></b>
+    <b>You seening this because you have not created any resume. Create one now. <a href="{% url 'create-resume'%}">here</a></b>
 </div>
 {% endif %}
 <section>
     <div class="p-5 md-4 bg-light rounded-3">
         <div class="container-fluid py-5">
-            <h1 class="display-5 fw-bold">Welcome to Django Jobs</h1>
+            <h1 class="display-5 fw-bold">Welcome to SadaShive Jobs</h1>
             <p class="col-md-8 fs-4">Applicent Dashboard</p>
         </div>
     </div>
@@ -26,7 +26,7 @@
 <section>
     <div class="p-5 md-4 bg-light rounded-3">
         <div class="container-fluid py-5">
-            <h1 class="display-5 fw-bold">Welcome to Django Jobs</h1>
+            <h1 class="display-5 fw-bold">Welcome to SadaShive Jobs</h1>
             <p class="col-md-8 fs-4">Recruiter Dashboard</p>
         </div>
     </div>
