--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm#QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    
-    <title>Django Job Portal - Login</title>
+    <title>SadaShive Job Portal - Login</title>
 </head>
 <body>
     <div class="container col-xl-10 col-xxl-8 px-4 py-5">
         <div class="row align-items-center g-lg-5 py-5">
             <div class="col-lg-7 text-center text-lg-start">
-                <h1 class="display-4 fw-bold 1h-1 mb-3">Welcome to Django Job Portal</h1>
+                <h1 class="display-4 fw-bold 1h-1 mb-3">Welcome to SadaShive Job Portal</h1>
                 <p class="col-lg-10 fs-4">
                     Find the job you need that is tailored to your exprience, expertise and skill sets.
                     There`s plenty of jobs to go round for everyone. Goodluck with hunt!
