--- a/templates/base.html
+++ b/templates/base.html
@@ -1,87 +1,134 @@
 <!-- base.html -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% load static %}
+    <link rel="icon" href="{% static 'images/favicon.png' %}" sizes="any" />
+    <style>
+      link[rel="icon"] {
+        border-radius: 50%;
+      }
+    </style>
+    <!-- <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" class=""> -->
     <title>{% block title %} Job Listing Portal {% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- Navbar -->
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">Job Portal</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                {% if request.user.is_authenticated %}
-                {% if request.user.is_applicant %}
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-                  </li>
-                  {% if request.user.has_resume %}
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'job-listing'%}">Apply to Jobs</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'applied-jobs'%}">Manage Applied Jobs</a>
-                  </li>
-                  {% else %}
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'create-resume'%}">Create Resume</a>
-                  </li>
-                  {% endif %}
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">{{request.user.email}}</a>
-                  </li>
-                </ul>
-                <a class="btn btn-primary btn-sm" href="{% url 'logout' %}">log Out</a>
-                {% elif request.user.is_recruiter %}
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
+      <div class="container-fluid">
+        <img
+          src="{% static '\images\logo.jpg' %}"
+          alt="Website Logo"
+          width="200"
+          height="100"
+          class="me-4"
+        />
+        <a class="navbar-brand" href="{% url 'home' %}">Home</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          {% if request.user.is_authenticated %} 
+          {% if request.user.is_applicant %}
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="{% url 'home' %}"
+                >Home</a
+              >
+            </li>
+            {% if request.user.has_resume %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'job-listing'%}"
+                >Apply to Jobs</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'applied-jobs'%}"
+                >Manage Applied Jobs</a
+              >
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'create-resume'%}"
+                >Create Resume</a
+              >
+            </li>
+            {% endif %}
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true"
+                >{{request.user.email}}</a
+              >
+            </li>
+          </ul>
+          <a class="btn btn-primary btn-sm" href="{% url 'logout' %}"
+            >log Out</a
+          >
+          {% elif request.user.is_recruiter %}
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <!-- <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  {% if request.user.has_comapny %}
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'create-job'%}">Create Job Ads</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'manage-jobs'%}">Manage Jobs</a>
-                  </li>
-                  {% else %}
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'update-company'%}">Create Comapny</a>
-                  </li>
-                  {% endif %}
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">{{request.user.email}}</a>
-                  </li>
-                </ul>
-                <a class="btn btn-primary btn-sm" href="{% url 'logout' %}">log Out</a>
-                {% endif %}
-                {% else %}
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'job-listing'%}">All Jobs</a>
-                  </li>
-                </ul>
-                <a class="btn btn-primary btn-sm" href="{% url 'login' %}">log In</a>
-                {% endif %}
-              </div>
+                  </li> -->
+            {% if request.user.has_comapny %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'create-job'%}"
+                >Create Job Ads</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'manage-jobs'%}">Manage Jobs</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'update-company'%}"
+                >Create Comapny</a
+              >
+            </li>
+            {% endif %}
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true"
+                >{{request.user.email}}</a
+              >
+            </li>
+          </ul>
+          <a class="btn btn-primary btn-sm" href="{% url 'logout' %}"
+            >log Out</a
+          >
+          {% endif %} {% else %}
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="{% url 'job-listing'%}"
+                >All Jobs</a
+              >
+            </li>
+          </ul>
+          <a class="btn btn-primary btn-sm" href="{% url 'login' %}">log In</a>
+          {% endif %}
         </div>
+      </div>
     </nav>
 
     <!-- Main Content -->
-    <div class="container my-4">
-        {% block content %}
-        {% endblock %}
-    </div>
+    <div class="container my-4">{% block content %} {% endblock %}</div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
