--- a/templates/website/home.html
+++ b/templates/website/home.html
@@ -1,27 +1,34 @@
 {% extends 'base.html' %}
+{% load humanize %}
+{% load widget_tweaks %}
 {% block content %}
 <div class="container text-center py-5">
     <h1 class="display-4">Find Your Dream Job</h1>
     <p class="lead">Search thousands of jobs available in your area.</p>
 
-    <!-- Job Search Form -->
-    <form method="GET" action="{% url 'job-listing' %}" class="row gy-2 gx-3 justify-content-center">
+    
+    <form method="GET"  class="row gy-2 gx-3 justify-content-center">
         <div class="col-md-4">
             <input type="text" name="title" class="form-control" placeholder="Job title, keywords" />
         </div>
         <div class="col-md-3">
-            <select name="location" class="form-select">
+            <!-- <label  for="autoSizingSelect">Select Location</label> -->
+            {% render_field filter.form.state class="form-select" value='Select'%}
+            <!-- <select name="location" class="form-select">
                 <option value="">Select Location</option>
                 <option value="remote">Remote</option>
                 <option value="onsite">Onsite</option>
-            </select>
+            </select> -->
         </div>
         <div class="col-md-3">
-            <select name="job_type" class="form-select">
+
+            <!-- <label  for="autoSizingSelect">Job Type</label> -->
+            {% render_field filter.form.job_type class="form-select" %}
+            <!-- <select name="job_type" class="form-select">
                 <option value="">Job Type</option>
                 <option value="full-time">Full-time</option>
                 <option value="part-time">Part-time</option>
-            </select>
+            </select> -->
         </div>
         <div class="col-md-2">
             <button type="submit" class="btn btn-primary w-100">Search Jobs</button>
