--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,11 @@
                 >Apply to Jobs</a
               >
             </li>
+            <li class="nav-item"></li>
+              <a class="nav-link" href="{% url 'resume-details'  pk=request.user.resume.pk%}"
+                >Resume details</a
+              >
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'applied-jobs'%}"
                 >Manage Applied Jobs</a
@@ -79,14 +84,16 @@
             >log Out</a
           >
           {% elif request.user.is_recruiter %}
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <!-- <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li> -->
-            {% if request.user.has_comapny %}
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          {% if request.user.has_comapny %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'create-job'%}"
                 >Create Job Ads</a
+              >
+            </li>
+            <li class="nav-item"></li>
+              <a class="nav-link" href="{% url 'company-details'  pk=request.user.id%}"
+                >Company details</a
               >
             </li>
             <li class="nav-item">
@@ -124,9 +131,21 @@
         </div>
       </div>
     </nav>
-
+  
     <!-- Main Content -->
-    <div class="container my-4">{% block content %} {% endblock %}</div>
+    <div class="container my-4">
+    {% if messages %}
+    <div>
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}" role="alert">
+                <b>{{ message }}</b>
+            </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+  
+      {% block content %} {% endblock %}
+    </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
