--- a/templates/resume/create_resume.html
+++ b/templates/resume/create_resume.html
@@ -2,25 +2,25 @@
 {% load widget_tweaks%}
 {% block content %}
 
-<div class="row">
-    <div class="col-md-6">
-        <div class="card mx-auto" style="width: 40rem;">
+<div class="row justify-content-center">
+    <div class="col-md-8">
+        <div class="card mx-auto shadow-sm" style="border-radius: 15px; padding: 20px;">
             <div class="card-body">
-                <h5 class="card-title mb-3">Create a Resume</h5>
+                <h5 class="card-title mb-3 text-center">Create a Resume</h5>
 
                 <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="mb-3">
                         <label for="floatingInput" class="form-label">First Name</label>
-                        {% render_field form.first_name class='form-control'  %}       
+                        {% render_field form.first_name class='form-control'  required="required" %}       
                     </div>
                     <div class="mb-3">
                         <label for="floatingInput" class="form-label">Last Name</label>
-                        {% render_field form.last_name class='form-control' %}       
+                        {% render_field form.last_name class='form-control'  required="required" %}       
                     </div>
                     <div class="mb-3">
                         <label for="floatingInput" class="form-label">Location</label>
-                        {% render_field form.location class='form-control' %}       
+                        {% render_field form.location class='form-control'  required="required"%}       
                     </div>
                     <div class="mb-3">
                         <label for="floatingInput" class="form-label">Job Title</label>
@@ -28,11 +28,13 @@
                     </div>
                     <div class="mb-3">
                         <label for="floatingInput" class="form-label">Upload Resume</label>
-                        {% render_field form.upload_resume class='form-control' %}       
+                        {% render_field form.upload_resume class='form-control'  required="required" %}       
                     </div>
 
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <div class="text-end">
+                        <button type="submit" class="btn btn-primary px-4">Submit</button>
+                    </div>
                 </form>
 
             </div>
